--- a/.gitignore
+++ b/.gitignore
@@ -12,4 +12,25 @@ logs
 results
 
 npm-debug.log
+
+# Compiled Object files
+*.slo
+*.lo
+*.o
+
+# Compiled Dynamic libraries
+*.so
+*.dylib
+
+# Compiled Static libraries
+*.lai
+*.la
+*.a
+
+*~
+
+#node
+build
+.npm-debug
 node_modules
+
