--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "devDependencies": {
     "grunt": "~0.4.2"
   },
+  "license": "MIT",
   "homepage": "https://github.com/boopathi/docker-remote",
   "repository": {
     "type": "git",
