--- a/package.json
+++ b/package.json
@@ -6,7 +6,12 @@
     "start": "node server.js",
     "test": "mocha"
   },
-  "dependencies": {},
+  "dependencies": {
+    "express": "~3.4.8",
+    "socket.io": "~0.9.16",
+    "cookie": "~0.1.0",
+    "ejs": "~0.8.5"
+  },
   "devDependencies": {
     "grunt": "~0.4.2"
   },
