--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "socket.io": "~0.9.16",
     "cookie": "~0.1.0",
     "ejs": "~0.8.5",
-    "underscore": "~1.5.2"
+    "underscore": "~1.5.2",
+    "backbone": "~1.1.0",
+    "q": "~1.0.0"
   },
   "devDependencies": {
     "grunt": "~0.4.2",
