--- a/bower.json
+++ b/bower.json
@@ -21,8 +21,8 @@
     "tests"
   ],
   "dependencies": {
-    "angularjs": "*",
     "jquery": "2.1.0",
-    "bootstrap": "3.0.3"
+    "bootstrap": "3.0.3",
+    "angular": "~1.2.10"
   }
 }
