--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "grunt-contrib-uglify": "~0.3.2",
     "grunt-contrib-concat": "~0.3.0",
     "grunt-contrib-cssmin": "~0.7.0",
-    "grunt-contrib-copy": "~0.5.0",
+    "grunt-contrib-copy": "~0.5.0"
   },
   "license": "MIT",
   "homepage": "https://github.com/boopathi/docker-remote",
